--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -24,6 +24,24 @@ To define guix dependencies add a source code block with =:noweb-ref guix-pkg :t
          <<guix-pkg>>
          ))))
 #+end_src
+* doom
+#+begin_src elisp :tangle init.el
+(doom!
+ :completion  company vertico ;(ivy +fuzzy +prescient +childframe)
+ :ui          nav-flash (modeline +light) ophints (popup +all +defaults) ligatures hydra
+ vc-gutter window-select treemacs
+ :editor      (evil +everywhere) fold lispy snippets (format +onsave) multiple-cursors word-wrap
+ :emacs       dired electric vc ibuffer undo
+ :term        eshell vterm
+ :tools       editorconfig (eval +overlay) (lookup +docsets) (magit) pdf (pass +auth) direnv make tree-sitter lsp
+ :checkers    syntax
+ :lang        clojure data emacs-lisp
+ (org +contacts +dragndrop +pandoc +present +hugo +roam2) beancount
+ rest sh plantuml (python +pyenv +lsp) (web +html) yaml json
+ :app         calendar telega (rss +org) torrent exwm irc
+ :email       (mu4e +gmail)
+ :config      (default +bindings +smartparens) literate)
+#+end_src
 * theme
 #+begin_src elisp :tangle packages.el
 (package! circadian)
@@ -651,7 +669,14 @@ emacsclient --eval "(message-mailto \"$1\")"
  (:map image-mode-map
    :n "q" #'kill-current-buffer))
 #+end_src
-* exwm bindings
+* exwm
+EXWM config is too big, so it was extracted to a separate [[../.doom.d/modules/app/exwm][doom app]].
+
+#+begin_src scheme :noweb-ref guix-pkg :tangle no
+"emacs-exwm"
+#+end_src
+
+** bindings
 #+begin_src elisp :tangle no :results value pp :wrap example elisp
 (-map (lambda (el) (cons (key-description (car el)) (cdr el)))
       exwm-input-global-keys)
