--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -436,16 +436,21 @@ query_entries() {
         retval)))
 
 (use-package! emms
-  :custom
-  (emms-playlist-buffer-name "*Music*")
-  (emms-source-file-default-directory (expand-file-name "~/Music/"))
-  (emms-source-file-directory-tree-function 'emms-source-file-directory-tree-find)
-  (emms-browser-covers 'emms-browser-cache-thumbnail)
+  ;; (emms-source-file-directory-tree-function 'emms-source-file-directory-tree-find)
+  ;; (emms-browser-covers 'emms-browser-cache-thumbnail)
 
   :config
+  (after! exwm
+    (exwm-input-set-key (kbd "<XF86AudioNext>") #'emms-next)
+    (exwm-input-set-key (kbd "<XF86AudioPlay>") #'emms-pause)
+    (exwm-input-set-key (kbd "<XF86AudioPrev>") #'emms-previous))
+
   (emms-all)
   (emms-history-load)
-  (setq emms-player-list (list emms-player-mpv)))
+  (setq emms-player-list (list emms-player-mpv)
+        emms-playlist-buffer-name "*Music*"
+        emms-player-mpv-update-metadata t
+        emms-source-file-default-directory (expand-file-name "~/Music/")))
 
 (use-package! emms-player-spotify
   :config
@@ -457,8 +462,8 @@ query_entries() {
 
   :config
   (if (string-empty-p counsel-spotify-client-secret)
-    (setq counsel-spotify-client-id (+pass-get-field "Sites/spotify.com" "client-id")
-          counsel-spotify-client-secret (+pass-get-field "Sites/spotify.com" "client-secret")))
+      (setq counsel-spotify-client-id (+pass-get-field "Sites/spotify.com" "client-id")
+            counsel-spotify-client-secret (+pass-get-field "Sites/spotify.com" "client-secret")))
 
   (cl-defmethod counsel-spotify-do-play ((backend counsel-spotify-linux-backend) (playable counsel-spotify-playable))
     (with-current-emms-playlist
@@ -712,11 +717,12 @@ EXWM config is too big, so it was extracted to a separate [[../.doom.d/modules/a
 #+end_src
 
 ** bindings
-#+begin_src elisp :tangle no :results value pp :wrap example elisp
+#+begin_src elisp :tangle no :results value pp :wrap example elisp :exports both
 (-map (lambda (el) (cons (key-description (car el)) (cdr el)))
       exwm-input-global-keys)
 #+end_src
 
+#+RESULTS:
 #+begin_example elisp
 (("s-<tab>" . exwm-jump-to-last-exwm)
  ("s-1" lambda nil
@@ -784,7 +790,10 @@ EXWM config is too big, so it was extracted to a separate [[../.doom.d/modules/a
  ("<XF86MonBrightnessUp>" . backlight)
  ("<XF86MonBrightnessDown>" . backlight)
  ("s-b" . bufler-switch-buffer)
- ("s-g" . linkmarks-select))
+ ("s-g" . linkmarks-select)
+ ("<XF86AudioNext>" . emms-next)
+ ("<XF86AudioPlay>" . emms-pause)
+ ("<XF86AudioPrev>" . emms-previous))
 #+end_example
 
 * archive :noexport:
